# Bhlumi

./: CMakeLists.txt  Makefile.am  README  README.md  configure.ac
4.x-cpc/: README  combine.list  demo.f  demo2.f  farm-cphst  farm-init  farmBASTA.cmd.template  farmCSF.cmd.template  farmSHIFT.cmd.template  farmSP.cmd.template  farmSP850.cmd.template  makefile  makefile.template  silicon.f  trical.f  trigas.f
4.x-cpc/demo/: demo.output  demo.output.100k.keypia.eq.2.keywgt.eq.0.rs  demo.tex  rs-linux.diff
4.x-cpc/figs/: BeMaTabs.tex.100k  Fig-MisO3.tex  laser5  llog2.f  makefile  makfig1.f  makfig2.f  makfig3.f  makfig4.f  obis2.f  plthis.f  prod1.2M.Z-gamma.tex  prod2.2016M.May95.tex  prod2.2146M.July95.tex  prod2.f  prod3.1973M.keywgt.eq.1.tex  prod3.2028M.keywgt.eq.2.tex  prod3.2083M.eps.e-5.tex  prod3.2090M.keywgt.eq.0.tex  ps2a5  readat.f
4.x-cpc/llog2/: bhl.hst.100k.linux  bhl.output.100k.linux  llog2.data.537M  llog2.hst.100k  llog2.hst.2114M  llog2.hst.537M  makefile  semaphore
4.x-cpc/obis2/: bhl.hst.100k.linux  bhl.output.100k.linux  makefile  obis2.data  obis2.hst.100k  obis2.hst.2118M  semaphore
4.x-cpc/prod1/: farm-init  makefile  prod1.data  prod1.hst.2M.10ene  semaphore
4.x-cpc/prod2/: bhl.hst.100k.linux  bhl.output.100k.linux  makefile  prod2.data  prod2.data.2037M  prod2.hst.100k  prod2.hst.2037M  semaphore
4.x-cpc/prod3/: makefile  prod2.data.1995  prod2.hst.1995  prod3.data  prod3.data.eps.e-5  prod3.data.keywgt.eq.0  prod3.data.keywgt.eq.1  prod3.hst.1973M.keywgt.eq.1  prod3.hst.2028M.keywgt.eq.2  prod3.hst.2083M.eps.e-5  prod3.hst.2090M.keywgt.eq.0
400/: Makefile.am  TRIG.f  TRIG.h  bhlum4.f  bhlumi.f  hadr5x19.f  m2agzi.f  makefile  makefile.ori  model.f  repi.f  vp_DHMZ.f  vp_DHMZ_2020.f  vp_knt_v3_0.f  vp_knt_v3_0_1.f
4xCPC/: Makefile.am  demo2.f  silicon.f  trical.f  trigas.f
4xCPC/demo-work/: demo.output.100k.keypia.eq.2.keywgt.eq.0.linux  demo.tex.100k.keypia.eq.2.keywgt.eq.0.rs
4xCPC/figs/: Makefile.am  PlotProd2.f
4xCPC/prod2/: Makefile.am  iniseed  prod2.data  semaphore
6xx/: BHL6Dict.cxx  BHL6Dict.h  LinkDef.h  Makefile.am  TMCgenBHL6.cxx  TMCgenBHL6.h  TestMini1.cxx  TestMini2.cxx  TestMini3.cxx
ProdCxx/: LinkDef1.h  MainProd.cxx  Makefile.am  ProdDict.cxx  ProdDict.h  TRig.cxx  TRig.h  TRobolProd.cxx  TRobolProd.h
ProdCxx/88GeV/: Makefile.am  Start.C  histo.root.160M  histo.root_400M
ProdCxx/89GeV/: Makefile.am  Start.C  Start.C_89GeV  histo.root.160M  histo.root_400M
ProdCxx/90GeV/: Makefile.am  Start.C  histo.root_400M
ProdCxx/91GeV/: Makefile.am  Start.C  Start.C_91GeV  histo.root.160M  histo.root_400M
ProdCxx/92GeV/: Makefile.am  Start.C  histo.root_400M
ProdCxx/93GeV/: Makefile.am  Start.C  Start.C_93GeV  histo.root.160M  histo.root_400M
ProdCxx/94GeV/: Makefile.am  Start.C  histo.root_400M
ProdCxx/Prod2/: Makefile.am  Start.C  Start_VPZoff.C
ProdCxx/farming/: SetFarmQ.C  SetFarmS.C  SetFarmSL.C  Stop.C  StopFarm.C  SubmFarmQ.C  SubmFarmS.C  q-nev.C
ProdCxxPlots/: HSTplot.cxx  HSTplot.h  HisNorm.cxx  HisNorm.h  Makefile.am  NewVPs.tex  OldBench.tex  Plot1.cxx  Plot2.cxx  Plot3.cxx  Zstudy.tex
gLIB/: Makefile.am  combine  combine.f  glibk.f
lib/: glibk.f  glibk.f.ori  makefile  makefile.ori
